# ReflexionAgent

./: .env.example  .gitignore  README.md  pyproject.toml
src/reflexion_agent/: __init__.py  main.py
src/reflexion_agent/agent/: __init__.py  actor.py  evaluator.py  factory.py  models.py  reflector.py  reflexion_loop.py
src/reflexion_agent/config/: __init__.py  default.yaml  development.yaml  production.yaml  settings.py
src/reflexion_agent/memory/: __init__.py  base.py  episodic_store.py  factory.py  models.py  reflection_store.py  short_term.py
src/reflexion_agent/observability/: __init__.py  logging.py  setup.py  tracing.py
src/reflexion_agent/prompts/: __init__.py  templates.py
src/reflexion_agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/reflexion_agent/tools/: __init__.py  base.py  calculator.py  registry.py  web_search.py
src/reflexion_agent/utils/: exceptions.py
