[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflexion-agent"
version = "1.0.0"
description = "Production-ready Reflexion Agent with episodic + reflection memory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.20.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "tiktoken>=0.6.0",
    "chromadb>=0.5.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.scripts]
# CLI: reflexion "your task here"
reflexion = "reflexion_agent.main:main"

[tool.hatch.build.targets.wheel]

packages = ["src/reflexion_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/reflexion_agent --cov-report=term-missing"
